--- a/IT266_UE_Proj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/IT266_UE_Proj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -28,7 +28,8 @@ LastExecutedLaunchDevice=WindowsNoEditor@ELAD-PC
 LastExecutedLaunchName=ELAD-PC
 
 [MRU]
-MRUItem0=/Game/Level1
+MRUItem0=/Game/MainMenu_lvl
+MRUItem1=/Game/Level1
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -37,18 +38,19 @@ Optimization=False
 Panel=True
 Primitive=False
 Uncategorized=False
+User Created=False
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/MainMenu_lvl
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Main_Menu.Main_Menu
 
 [DetailCategories]
 FirstPersonHUD_C.Default=True
@@ -123,7 +125,7 @@ K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
 EditableTextBox.Layout=True
 EditableTextBox.Content=True
-EditableTextBox.Style=False
+EditableTextBox.Style=True
 EditableTextBox.Appearance=True
 EditableTextBox.Behavior=True
 EditableTextBox.Performance=True
@@ -150,10 +152,289 @@ Widget.Behavior=True
 Widget.Performance=True
 Widget.Render Transform=True
 Widget.Navigation=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+FirstPersonProjectile_C.TransformCommon=True
+FirstPersonProjectile_C.Rendering=True
+FirstPersonProjectile_C.Input=True
+FirstPersonProjectile_C.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+Main_Menu_C.Appearance=True
+Main_Menu_C.Interaction=True
+Main_Menu_C.Input=True
+Main_Menu_C.Designer=True
+Main_Menu_C.Layout=True
+Main_Menu_C.Behavior=True
+Main_Menu_C.Performance=True
+Main_Menu_C.Render Transform=True
+Main_Menu_C.Navigation=True
+Level1_C.Tick=True
+Level1_C.Replication=True
+Level1_C.Input=True
+Level1_C.Actor=True
+FirstPersonGameMode_C.Classes=True
+FirstPersonGameMode_C.Tick=True
+FirstPersonGameMode_C.Game=True
+FirstPersonGameMode_C.GameMode=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Physics=True
+WorldSettings.Lightmass=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+Untitled_C.Tick=True
+Untitled_C.Replication=True
+Untitled_C.Input=True
+Untitled_C.Actor=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Experimental=True
+ProjectPackagingSettings.Packaging=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Audio=True
+AudioSettings.Dialogue=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+EndUserSettings.Privacy=True
+EndUserSettings.PrivacyDetails=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+InputSettings.Bindings=True
+InputSettings.MouseProperties=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystem.NavigationSystem=True
+NavigationSystem.Navigation Enforcing=True
+NavigationSystem.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardShading=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.VR=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.IO=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.RichCurveEditor=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.EpicSurvey=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.SoundCueGraphEditor=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+UMGEditorProjectSettings.ShowHideWidgetClasses=True
+AndroidRuntimeSettings.APKPackaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.AdvancedAPKPackaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.DataCooker=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.Memory=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Amazon_S3=True
+HTML5SDKSettings.HTML5_Devices=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+LinuxTargetSettings.Rendering=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Cached Shader Formats=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+LevelSequenceEditorSettings.Tracks=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+SlateRemoteSettings.RemoteServer=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+Pause_Menu_C.Appearance=True
+Pause_Menu_C.Interaction=True
+Pause_Menu_C.Input=True
+Pause_Menu_C.Behavior=True
+Pause_Menu_C.Performance=True
+Pause_Menu_C.Render Transform=True
+Pause_Menu_C.Navigation=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Behavior=True
+Border.Performance=True
+Border.Render Transform=True
+Border.Navigation=True
+Border.Events=True
+Pause_Menu_C.Designer=True
+Pause_Menu_C.Layout=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
 /Game/FirstPersonBP/Blueprints/HUD.HUD=1
+/Game/Level1.Level1:PersistentLevel.Level1=1
+/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode=1
+/Game/FirstPersonBP/Blueprints/Main_Menu.Main_Menu=1
+/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
+/Game/FirstPersonBP/Blueprints/Pause_Menu.Pause_Menu=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -166,7 +447,18 @@ Widget=
 Visual=
 Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
+ContentWidget=
 PanelWidget=
+EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
+
+[PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile;
+
+[DetailCustomWidgetExpansion]
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+
+[ColorThemes]
+Theme0=New Theme
+Theme0Color0=(R=56.103821,G=0.803165,B=1.000000,A=1.000000)
 
 
