--- a/IT266_UE_Proj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/IT266_UE_Proj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -28,8 +28,8 @@ LastExecutedLaunchDevice=WindowsNoEditor@ELAD-PC
 LastExecutedLaunchName=ELAD-PC
 
 [MRU]
-MRUItem0=/Game/MainMenu_lvl
-MRUItem1=/Game/Level1
+MRUItem0=/Game/Level1
+MRUItem1=/Game/MainMenu_lvl
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -47,10 +47,12 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/MainMenu_lvl
+LastLevel=/Game/Level1
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Main_Menu.Main_Menu
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 FirstPersonHUD_C.Default=True
@@ -426,6 +428,31 @@ K2Node_FunctionEntry.Outputs=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+REINST_FirstPersonCharacter_C_840.None=True
+REINST_FirstPersonCharacter_C_840.Tick=True
+REINST_FirstPersonCharacter_C_840.Character=True
+REINST_FirstPersonCharacter_C_840.Camera=True
+REINST_FirstPersonCharacter_C_840.Pawn=True
+REINST_FirstPersonCharacter_C_840.Rendering=True
+REINST_FirstPersonCharacter_C_840.Replication=True
+REINST_FirstPersonCharacter_C_840.Input=True
+REINST_FirstPersonCharacter_C_840.Actor=True
+REINST_FirstPersonCharacter_C_851.None=True
+REINST_FirstPersonCharacter_C_851.Tick=True
+REINST_FirstPersonCharacter_C_851.Character=True
+REINST_FirstPersonCharacter_C_851.Camera=True
+REINST_FirstPersonCharacter_C_851.Pawn=True
+REINST_FirstPersonCharacter_C_851.Rendering=True
+REINST_FirstPersonCharacter_C_851.Replication=True
+REINST_FirstPersonCharacter_C_851.Input=True
+REINST_FirstPersonCharacter_C_851.Actor=True
+MainMenu_lvl_C.Tick=True
+MainMenu_lvl_C.Replication=True
+MainMenu_lvl_C.Input=True
+MainMenu_lvl_C.Actor=True
+LevelScriptBlueprint.BlueprintOptions=True
+LevelScriptBlueprint.ClassOptions=True
+LevelScriptBlueprint.Interfaces=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
@@ -447,7 +474,7 @@ Widget=
 Visual=
 Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
-ContentWidget=
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
 PanelWidget=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 
