--- a/IT266_UE_Proj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/IT266_UE_Proj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -51,7 +51,6 @@ LastLevel=/Game/Level1
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Main_Menu.Main_Menu
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
@@ -453,6 +452,60 @@ MainMenu_lvl_C.Actor=True
 LevelScriptBlueprint.BlueprintOptions=True
 LevelScriptBlueprint.ClassOptions=True
 LevelScriptBlueprint.Interfaces=True
+REINST_FirstPersonCharacter_C_977.None=True
+REINST_FirstPersonCharacter_C_977.Tick=True
+REINST_FirstPersonCharacter_C_977.Character=True
+REINST_FirstPersonCharacter_C_977.Camera=True
+REINST_FirstPersonCharacter_C_977.Pawn=True
+REINST_FirstPersonCharacter_C_977.Rendering=True
+REINST_FirstPersonCharacter_C_977.Replication=True
+REINST_FirstPersonCharacter_C_977.Input=True
+REINST_FirstPersonCharacter_C_977.Actor=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+FirstPersonCharacter_C.Variable=True
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Sockets=True
+FirstPersonCharacter_C.Shape=True
+FirstPersonCharacter_C.Navigation=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.Collision=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.ComponentReplication=True
+FirstPersonCharacter_C.Cooking=True
+FirstPersonCharacter_C.Events=True
+K2Node_InputAction.Input=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
@@ -462,6 +515,7 @@ LevelScriptBlueprint.Interfaces=True
 /Game/FirstPersonBP/Blueprints/Main_Menu.Main_Menu=1
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/FirstPersonBP/Blueprints/Pause_Menu.Pause_Menu=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
